# New-Download-Manager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  appicon.rc  main.qrc
Database/: DM.db
HeaderAndUi/: ApplicationManager.h  BatchDownloadCreatorWidget.h  BatchDownloadCreatorWidget.ui  CalculatorDownload.h  CalculatorDownloadSpeed.h  CompleteDownloadDialog.h  CompleteDownloadDialog.ui  ConverterQueueTime.h  ConverterSizeToSuitableString.h  DatabaseInteract.h  DatabaseManager.h  DatabaseQueryPreparer.h  DatabaseReader.h  DateTimeManager.h  DeterminerDownloadFileType.h  Download.h  DownloadCategory.h  DownloadControl.h  DownloadFileWriter.h  DownloadManager.h  Downloader.h  MainTableViewController.h  MainTreeViewController.h  MainTreeViewQueueItem.h  MainWindow.h  MainWindow.ui  NewDownloadComplitedInformationWidget.h  NewDownloadComplitedInformationWidget.ui  NewDownloadCreater.h  NewDownloadUrlWidget.h  NewDownloadUrlWidget.ui  OpenFileForUser.h  OptionsWidget.h  OptionsWidget.ui  PartDownload.h  PartDownloader.h  ProcessAddNewDownloadToQueue.h  ProcessDatabaseOutput.h  ProcessEnum.h  ProxyManager.h  (+21 more)
Ini file/: OptionAndSettings.ini
src/: ApplicationManager.cpp  BatchDownloadCreatorWidget.cpp  CalculatorDownload.cpp  CalculatorDownloadSpeed.cpp  CompleteDownloadDialog.cpp  ConverterQueueTime.cpp  ConverterSizeToSuitableString.cpp  DatabaseInteract.cpp  DatabaseManager.cpp  DatabaseQueryPreparer.cpp  DatabaseReader.cpp  DateTimeManager.cpp  DeterminerDownloadFileType.cpp  Download.cpp  DownloadCategory.cpp  DownloadControl.cpp  DownloadFileWriter.cpp  DownloadManager.cpp  Downloader.cpp  MainTableViewController.cpp  MainTreeViewController.cpp  MainTreeViewQueueItem.cpp  MainWindow.cpp  NewDownloadComplitedInformationWidget.cpp  NewDownloadCreater.cpp  NewDownloadUrlWidget.cpp  OpenFileForUser.cpp  OptionsWidget.cpp  PartDownload.cpp  PartDownloader.cpp  ProcessAddNewDownloadToQueue.cpp  ProcessDatabaseOutput.cpp  ProcessEnum.cpp  ProxyManager.cpp  Queue.cpp  QueueManager.cpp  QueueTimeManager.cpp  RunGuard.cpp  ScheduleTableViewController.cpp  ScheduleTreeWidgetTabController.cpp  (+12 more)
test/: CMakeLists.txt
test/src/: Download_test.cpp  PartDownload_test.cpp
translation/: app_Persian.ts
